Fixed layout bug, Closes #23

--- a/wikibox/static/master.css
+++ b/wikibox/static/master.css
@@ -8,12 +8,19 @@ body {
   margin: 0;
   display: grid;
   height: 100vh;
-  grid-template-columns: 500px calc(100vw - 500px);
   grid-template-rows: 120px calc(100vh - 120px);
   grid-template-areas:
     "header header"
     "nav main";
   font-family: 'Roboto', sans-serif;
+}
+
+body.with-nav {
+  grid-template-columns: 500px calc(100vw - 500px);
+}
+
+body.no-nav {
+  grid-template-columns: auto 100vw;
 }
 
 /* HEADER */
@@ -222,10 +229,9 @@ table, table thead, table tbody, table tr, table th, table td {
   box-sizing: border-box;
 }
 
-main table tr {
-  display: grid;
-  grid-template-columns: 300px 300px;
-  width: 600px;
+main table tr th, main table tr td {
+  width: 300px;
+  max-width: 300px;
 }
 
 main table tr th,main  table tr td {
